@@ -1,3 +1,10 @@
+2010-08-12  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 1.39 released.
+
+        * Fixed some deprecated defined(%hash) statements
+
+
 2010-08-09  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 1.36 released.
